[gd_scene load_steps=8 format=3 uid="uid://dxnaxolqym1k"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_hkloa"]
[ext_resource type="Texture2D" uid="uid://celqrhxvy1b2c" path="res://Graphics/menu_project_west.png" id="2_s4sqe"]
[ext_resource type="FontFile" uid="uid://d1dlguxswy045" path="res://Graphics/CowboyOutlaw-R9qGM.otf" id="3_skxkc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56y85"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quje3"]
bg_color = Color(0.791999, 0.791999, 0.791999, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7j1rx"]
bg_color = Color(0.925353, 0.925353, 0.925353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsli7"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hkloa")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.54099, 0.54099, 0.54099, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_s4sqe")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.0776042
anchor_top = 0.175
anchor_right = 0.582292
anchor_bottom = 0.565741
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="Volume2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_skxkc")
theme_override_font_sizes/font_size = 45
text = "Volume"

[node name="Volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="Music" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_skxkc")
theme_override_font_sizes/font_size = 45
text = "Music"

[node name="music_slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="SFX" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_skxkc")
theme_override_font_sizes/font_size = 45
text = "SFX"

[node name="SFX_slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="Mute" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_skxkc")
theme_override_font_sizes/font_size = 40
text = "Mute"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Resolution" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_skxkc")
theme_override_font_sizes/font_size = 25
selected = 1
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0776042
anchor_top = 0.840741
anchor_right = 0.136979
anchor_bottom = 0.893519
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_skxkc")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_56y85")
theme_override_styles/hover = SubResource("StyleBoxFlat_quje3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7j1rx")
theme_override_styles/normal = SubResource("StyleBoxFlat_fsli7")
text = "Back"
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
